# rozo-tap-to-pay

./: .gitignore  Anchor.toml  LICENSE  README.md  ROZO ecosystem.md  env.example  package.json
app/: admin.ts  authorize-payment.ts  deploy.ts
programs/: README.md
programs/rozo-tap-to-pay/: Cargo.toml
programs/rozo-tap-to-pay/src/: lib.rs  lib.rs.bak
scripts/: deploy-program.sh  run-soldev.sh
src/: demo.js  index.js
src/contracts/solana/rozo_swaptopay/: .gitignore  Anchor.toml  README.md  package.json
src/contracts/solana/rozo_swaptopay/examples/: sol-to-usdc.ts
src/contracts/solana/rozo_swaptopay/src/: lib.rs
src/contracts/solana/rozo_swaptopay/tests/: swaptopay.ts
src/contracts/solana/rozo_tap_to_pay/: README.md
src/contracts/solana/rozo_tap_to_pay/examples/: sns-lookup.ts
src/contracts/solana/rozo_tap_to_pay/src/: lib.rs
src/contracts/solana/rozo_tap_to_pay/tests/: rozo_tap_to_pay.ts
src/crypto/: crypto.js
src/nfc/: clientDevice.js  ndefHandler.js  posSimulator.js
src/server/: paymentVerifier.js
src/tests/: paymentFlow.test.js  usdcPayment.test.js
src/utils/: deviceRegistry.js
src/wallet/: cryptoWallet.js  paymaster.js
