[package]
name = "rozo-tap-to-pay"
version = "0.1.0"
description = "A Solana smart contract for tap-to-pay functionality"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rozo_tap_to_pay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0" }
solana-program = "=1.16.0"

[dev-dependencies]
solana-sdk = "=1.16.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 